# glean-parser

./: Cargo.toml
glean_parser/: Cargo.toml
glean_parser/src/: lib.rs  metrics.rs
glean_parser/templates/: metrics.jinja2
glean_parser_cli/: Cargo.toml
glean_parser_cli/src/: main.rs
test_data/: small_metrics.yaml  yaml_nits.yamlx
