[package]
name = "glean_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heck = "0.4.0"
indexmap = "1.8.0"
jsonschema = "0.13.3"
minijinja = { version = "0.12.0", features = ["debug"] }
once_cell = "1.9.0"
serde = "1.0.133"
serde_json = "1.0.75"
serde_yaml = "0.8.23"
yaml-merge-keys = { version = "0.5.1", features = ["serde_yaml"] }
